@@ -1,3 +1,5 @@
+- use /dev/input/by-id/xxx device instead of vendor+product for evdev mice
+  (vendor+product support is dropped in x11-driver-input-evdev-1.2.0)
 - fix device /dev/input/by-id/usb-$ID_SERIAL-event-mouse for wacoms
   when the ID_SERIAL contains special chars
 
